--- a/styles/global.css
+++ b/styles/global.css
@@ -23,3 +23,29 @@ h1{
     font-size: 3.6rem;
     margin-block: 0.8rem 4.4rem;
 }
+
+h2{
+    font-size: 3.2rem;
+    margin-block: 0.2rem 0.8rem;
+}
+
+h1, h2, h3{
+    color: var(--text-secondary);
+}
+
+h4{
+    color: var(--text-secondary);
+}
+
+p{
+    color: var(--text-secondary);
+}
+
+ul{
+    padding-left: 2.4rem;
+    font-weight: 700;
+
+    li::marker{
+        color: var(--text-secondary);
+    }
+}
